<resources>
    <string name="app_name">WirelessMatchingGame</string>
    <string name="emailTxt">Email</string>
    <string name="passwordTxt">Password</string>
    <string name="loginTxt">Login</string>
    <string name="registerTxt">Register</string>
    <string name="noaccTxt">No account?</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="createAccTxt">Create Account</string>
    <string name="passwordHint">Your password</string>
    <string name="confPassTxt">Confirm Password</string>
    <string name="confPassHint">Confirm your password</string>
    <string name="welcomeTxt">Welcome</string>
    <string name="guestTxt">Guest</string>
    <string name="startgameTxt">Start Game!</string>
    <string name="submitTxt">Submit</string>
    <string name="editAccountTxt">Edit Account</string>
    <string name="hintEmailTxt">your@email.com</string>
    <string name="oldpassTxt">Old password</string>
    <string name="newPassTxt">New password</string>
    <string name="confNewPassTxt">Confirm New Password</string>
    <string name="updateTxt">Update</string>
    <string name="logoutTxt">Logout</string>
    <string name="countTxt">Count</string>
    <string name="instructionTxt">Select 3 images to do matching</string>
    <string name="instruction2Txt">Select images (Required 3 images)</string>
    <string name="labelHintTxt">What is this?</string>
    <string name="statisticsHeadingTxt">Statistics Report</string>
    <string name="accountTxt">Account</string>
    <string name="homeTxt">Home</string>
    <string name="statisticsTxt">Statistics</string>
    <string name="emailNullAlert">Please input Email!</string>
    <string name="passwordNullAlert">Please input Password!</string>
    <string name="loginSuccess">Authentication Success!</string>
    <string name="loginFailedInvalidPass">Login Failed : Invalid Password!</string>
    <string name="loginFailedNoAccount">Login Failed : Account does not exists!</string>
    <string name="loginFailed">Login failed!</string>
    <string name="pleaseInputEmail">Please input email!</string>
    <string name="pleaseInputPassword">Please input password!</string>
    <string name="pleaseInputCFPassword">Please input confirm password!</string>
    <string name="passwordMismatch">Password mismatch!</string>
    <string name="registerSuccess">Registration successful!</string>
    <string name="badPassword">Registration Failed : Bad password used! Please input more than 6 characters</string>
    <string name="registerFailed">Registration Failed !</string>
    <string name="errorLoadingInfo">Error retrieving email address, please contact administrator!</string>
    <string name="oldPassNull">Please input old password</string>
    <string name="newPassNull">Please input new password</string>
    <string name="confirmNewPassNull">Please input confirm new password</string>
    <string name="confirmNewPassMismatch">Confirmation of the new password mismatch!</string>
    <string name="changePasswordTxt">Change password</string>
    <string name="passwordUpdate">Password Updated!</string>
    <string name="passwordUpdateFailed">Password Update Failed!</string>
    <string name="authenticationFailed">Authentication Failed!</string>
    <string name="tryAgain">Please try again</string>
    <string name="inputLabelHeading">Please input picture label</string>
    <string name="correctLabel">Correct Label!</string>
    <string name="incorrectLabel">Incorrect Label!</string>
    <string name="wonHeading">You won!</string>
    <string name="wonTxt">You won this game!</string>
    <string name="loseHeading">You lose!</string>
    <string name="loseTxt">You lose this game!</string>
    <string name="alert">Alert</string>
    <string name="inputLabel1">Please input description for image 1</string>
    <string name="inputLabel2">Please input description for image 2</string>
    <string name="inputLabel3">Please input description for image 3</string>
    <string name="uploadImage1">Please upload image 1</string>
    <string name="uploadImage2">Please upload image 2</string>
    <string name="uploadImage3">Please upload image 3</string>
    <string name="flips"> flips</string>
    <string name="seconds"> seconds</string>
</resources>
